fixed asset location

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		
 		<meta property="og:title" content="StormHacks 2025" />
         <meta property="og:description" content="Join us at SFU Burnaby Campus from October 4th to 5th for Western Canada's biggest hackathon" />
-        <meta property="og:image" content="%sveltekit.assets%/experiences/lofi.webp" />
+        <meta property="og:image" content="%sveltekit.assets%/assets/experiences/lofi.webp" />
         <meta property="og:url" content="https://stormhacks.com" />
         <meta property="og:type" content="website" />
 		%sveltekit.head%
