Squashed commit of the following:
commit 8ed3b58b2dc26bac539ad2970b5af28038d16311
Author: goldentoaste <rayg2375@gmail.com>
Date:   Sun Sep 7 20:00:20 2025 -0700

    updated music spacing

commit 2f3f997568f5eed814b762be6249cfddf3ffe236
Author: goldentoaste <rayg2375@gmail.com>
Date:   Sun Sep 7 19:42:26 2025 -0700

    Update +layout.svelte

commit bfc56cd803295f9a2813f50f52512571647cbebb
Merge: 33235d4 3a84532
Author: goldentoaste <rayg2375@gmail.com>
Date:   Sun Sep 7 19:38:51 2025 -0700

    Merge branch 'fix_optimize' of https://github.com/sfusurge/SH25-final into fix_optimize

commit 33235d4af7c7b8f2ce4e89fdd40e43bdc658bad4
Author: goldentoaste <rayg2375@gmail.com>
Date:   Sun Sep 7 19:37:26 2025 -0700

    fixed frame finally

commit 3a845325a12eaa9ca6014387e7c4556c2c2726ac
Merge: 8649c86 71cf1ff
Author: brendanshen24 <91840687+brendanshen24@users.noreply.github.com>
Date:   Sun Sep 7 19:30:32 2025 -0700

    Merge remote-tracking branch 'origin/fix_optimize' into fix_optimize

commit 8649c86f205b1b8a09e45dc3e3185da1271daa75
Author: brendanshen24 <91840687+brendanshen24@users.noreply.github.com>
Date:   Sun Sep 7 19:30:27 2025 -0700

    removed motorola

commit 71cf1ffe4ba958aee732ed26d4879ccf374d86a1
Author: Philip <philip03ho@gmail.com>
Date:   Sun Sep 7 18:44:35 2025 -0700

    mobile faq, sponsor improvements, adjust content alignments

commit 768b016156861b37eb20729cd810302b9514a417
Author: brendanshen24 <91840687+brendanshen24@users.noreply.github.com>
Date:   Sun Sep 7 10:37:29 2025 -0700

    fixed asset location

commit 1065384163bb81c3a1a6560dffa0c2841decf1d9
Author: brendanshen24 <91840687+brendanshen24@users.noreply.github.com>
Date:   Sun Sep 7 10:19:31 2025 -0700

    added meta tags

commit e8be058df3578b09f009dff21634193d5b892827
Merge: 3285155 503ff6d
Author: goldentoaste <rayg2375@gmail.com>
Date:   Sun Sep 7 02:45:10 2025 -0700

    Merge branch 'fix_optimize' of https://github.com/sfusurge/SH25-final into fix_optimize

commit 32851556cf6

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,14 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		        <title>StormHacks 2025</title>
+        <meta name="description" content="Join us at SFU Burnaby Campus from October 4th to 5th for Western Canada's biggest hackathon" />
+		
+		<meta property="og:title" content="StormHacks 2025" />
+        <meta property="og:description" content="Join us at SFU Burnaby Campus from October 4th to 5th for Western Canada's biggest hackathon" />
+        <meta property="og:image" content="%sveltekit.assets%/assets/experiences/lofi.webp" />
+        <meta property="og:url" content="https://stormhacks.com" />
+        <meta property="og:type" content="website" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
