--- a/src/app.html
+++ b/src/app.html
@@ -17,12 +17,19 @@
 	<meta name="description"
 		content="Join us at SFU Burnaby Campus from October 4th to 5th for Western Canada's biggest hackathon" />
 
+	<meta property="og:site_name" content="sfusurge.com" />
+	<meta property="article:author" content="https://sfusurge.com" />
+	<meta property="article:publisher" content="https://sfusurge.com" />
 	<meta property="og:title" content="StormHacks 2025" />
 	<meta property="og:description"
 		content="Join us at SFU Burnaby Campus from October 4th to 5th for Western Canada's biggest hackathon" />
-	<meta property="og:image" content="%sveltekit.assets%/assets/experiences/lofi.webp" />
 	<meta property="og:url" content="https://stormhacks.com" />
 	<meta property="og:type" content="website" />
+	<meta property="og:image" content="/assets/experiences/lofi.webp" />
+	<meta property="og:image:type" content="image/webp" />
+	<meta property="og:image:alt" content="Stormhacks 2025" />
+	<meta property="og:image:width" content="400" />
+	<meta property="og:image:height" content="222" />
 	%sveltekit.head%
 </head>
 
